Add DSPy-powered flight check system with prompt optimization

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,54 @@
-".venv" 
+".venv"
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Project specific
+papers/*
+*flight_check_report*.json
+enhanced_flight_check_report*.json
+
+# Python cache files
+*.cpython-*.pyc
+
+# UV lock file (optional - some prefer to commit this)
+uv.lock
