--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "anthropic>=0.51.0",
     "arxiv>=2.2.0",
-    "mcp>=1.7.1",
+    "dspy>=2.6.27",
+    "fastmcp>=2.8.1",
+    "mcp>=1.8.0",
+    "nest-asyncio>=1.6.0",
+    "python-dotenv>=1.1.0",
 ]
